@@ -174,12 +174,20 @@ UnitTest.asynctest('browser.tinymce.plugins.fullpage.FullPagePluginTest', functi
   };
 
   TinyLoader.setupLight(function (editor, onSuccess, onFailure) {
-    Pipeline.async({}, Log.steps('TBA', 'FullPage: Test full page header, footer, body attributes, hide in source view and adding and removing stylesheets',
-      [
-        sParseStyles(editor),
-        sProtectConditionalCommentsInHeadFoot(editor)
-      ].concat(suite.toSteps(editor))
-    ), onSuccess, onFailure);
+    Pipeline.async({}, [
+      Log.stepsAsStep('TBA', 'FullPage: Test full page header, footer, body attributes, hide in source view and adding and removing stylesheets',
+        [
+          sParseStyles(editor),
+          sProtectConditionalCommentsInHeadFoot(editor)
+        ].concat(suite.toSteps(editor))
+      ),
+      Log.stepsAsStep('TINY-6541', 'FullPage: Text content should not be modified', [
+        Step.sync(() => {
+          editor.setContent('some plain text');
+          Assertions.assertEq('should return plain text content', 'some plain text', editor.getContent({ format: 'text' }));
+        })
+      ])
+    ], onSuccess, onFailure);
 
     teardown(editor);
   }, {
